k8s/base/deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-service
  namespace: mldlc
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: deployment-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: deployment-service
    spec:
      serviceAccountName: deployment-service
      containers:
        - name: deployment-service
          image: mldlc/deployment-service:dev
          imagePullPolicy: IfNotPresent
