k8s/base/postgres-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-ingress
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  ports:
    - name: postgres
      port: 15432
      targetPort: 15432
      protocol: TCP
